Fix wrapping long text

--- a/src/components/carousel.scss
+++ b/src/components/carousel.scss
@@ -103,7 +103,6 @@ h1, h2, h3 {
 
   .btn {
     --size: 3rem;
-
     align-items: center;
     background-color: transparent;
     border: 3px solid transparent;
@@ -231,6 +230,7 @@ h1, h2, h3 {
 
 .slide__image {
   --d: 20;
+  max-width: 100vw;
 
   height: 110%;
   left: -5%;
